# nereus-camera-test-rig

./: .gitignore  CLAUDE.md  CONNECTION_TEST.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
configs/: rig.example.yaml
configs/cameras/: imx708.yaml  openmv_ae3.yaml  openmv_n6.yaml
configs/experiments/: low_light.yaml  object_detection.yaml  reference_card_above_water.yaml  reference_card_below_water.yaml
docs/: SPEC_nereus_camera_evaluation_full.md  SPEC_nereus_camera_test_rig.md  downselect_criteria.md  implementation_plan.md  open_questions.md  prior_art_review.md
docs/reference_card/: README.md
host_tools/: collect_results.py  compare_cameras.py  deploy_openmv.py  discover_openmv.py  focus_stream.py  generate_report.py  run_experiment.py  verify_rig.py
openmv/: __init__.py
openmv/ae3/: board_config.py  boot.py  main.py
openmv/common/: __init__.py  capture_service.py  command_protocol.py  device_info.py
openmv/n6/: board_config.py  boot.py  main.py
scripts/: collect_diagnostics.sh  configure_pi_camera.sh  install_pi.sh  start_web.sh  test_experiment.sh  test_imx708.sh  test_openmv_ae3.sh  test_openmv_n6.sh
src/nereus_camera_test_rig/: __init__.py  cli.py  config.py  controller.py  logging_config.py  models.py
tests/: conftest.py
tests/hardware/: test_openmv_ae3.py  test_openmv_n6.py
tests/unit/: _capture_helpers.py  test_analysis.py  test_checksums.py  test_cli.py  test_config.py  test_controller_capture.py  test_coordinator.py  test_discover_openmv.py  test_experiment_store.py  test_image_probe.py  test_imx708.py  test_models.py  test_naming.py  test_openmv_protocol.py  test_openmv_usb.py  test_registry.py  (+2 more)
(+37 files in other folders)
